@@ -1,3 +1,11 @@
+MJ 24/03/05
+- Fixed a memory leak. It was present when simulating churn with
+  Linkable protocols. Now Linkables have to implement an "onKill"
+  method that is called when the hosting node gets removed from the
+  network. It should release links to other nodes. This prevents the
+  creation of large trees of unused objects with a root being referenced by a
+  live object.
+
 MJ 11/03/2005
 - BallExpansion is revised and now accepts parameter "stats".
 - IncrementalStats is extended with a new method to add an item k times.
